# OpenPCDet

./: clean.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: INSTALL.md
pcdet/datasets/argo2/argo2_utils/: so3.py
pcdet/models/dense_heads/: point_head_template.py
tools/cfgs/custom_models/: second.yaml
tools/cfgs/dataset_configs/: custom_dataset.yaml
tools/cfgs/kitti_models/: pv_rcnn_plusplus_reproduced_by_community.yaml
