[metadata]
name = pcdet
description = OpenPCDet is a general codebase for 3D object detection from point cloud
author = Shaoshuai Shi
author_email = shaoshuaics@gmail.com
license_expression = Apache-2.0
url = https://github.com/open-mmlab/OpenPCDet
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    llvmlite
    numba
    tensorboardX
    easydict
    pyyaml
    scikit-image
    tqdm
    SharedArray
    ; spconv ; spconv has different names depending on the cuda version

[options.packages.find]
exclude = 
    tools
    data
    output        

[options.extras_require]
dev =
    pytest
    flake8
    mypy

[options.entry_points]
console_scripts =
    pcdet-train = pcdet.tools.train:main
    pcdet-test = pcdet.tools.test:main
